--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <version>2.0.0</version>
   <name>Chat Game Fontificator</name>
   <description>Chat Game Fontificator</description>
-
   <dependencies>
     <dependency>
       <groupId>log4j</groupId>
@@ -27,12 +26,17 @@
       <artifactId>jasypt</artifactId>
       <version>1.9.0</version>
     </dependency>
+    <!-- Add JSON dependency -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
+    </dependency>
   </dependencies>
-
   <properties>
-    <java.version>1.6</java.version>
+    <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <build>
     <finalName>Chat Game Fontificator</finalName>
     <resources>
@@ -66,18 +70,15 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
-
 </project>
